--- a/frontend/src/components/FormComponents.module.scss
+++ b/frontend/src/components/FormComponents.module.scss
@@ -413,17 +413,18 @@
 }
 
 .boxDigitalHeadTitle {
-  width: 659px;
+  // width: 659px;
   height: 34px;
   gap: 4px;
   opacity: 0px;
 }
 
 .boxDigitalFieldTitle {
-  width: 659px;
+  // width: 659px;
   height: 60px;
   gap: 4px;
   opacity: 0px;
+  text-align: justify;
 }
 
 .boxDigitalInput {
